styles/index.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --red-color: #8C3830;
    --pink-color: #E1B1A3;
    --lightGray-color: #F4F3EE;
    --gray-color: #D0CDC8;
    --brown-color: #433C38;
    --black-color: #151313;
    --white-color: #FFF;

    --font-header: "Ranchers", sans-serif;
    --font-normal: "Ubuntu", sans-serif;
    --font-hero: "Ranchers", sans-serif;

    
    --weight-normal: 500;
    --weight-bold: 600;
    --weight-bolder:700;

    --title-size: 2.25rem;
    --heading-size: 1.5rem;
    --aboveNormal-size: 1.25rem;
    --normal-size: 1rem;
    --small-size: 0.75rem;
    --smaller-size: 0.5rem;
}

body {
    font-family: var(--font-normal);
    font-weight: var(--weight-normal);
    font-size: var(--normal-size);
}

/*###################
    HEADER
######################*/
.nav-title {
    font-family: var(--font-header);
    font-size: var(--title-size);
    font-weight: var(--weight-bolder);
    letter-spacing: 1px;
    margin-bottom: 0.25em;
    padding-top: 0.5em;

    color: var(--lightGray-color);
}

.nav {
    background: var(--red-color);
    border-radius: 35px;
    text-align: center;
    margin: 0 auto;
    margin-top: 0.5em;
    width: 90%;
}
.nav-links-list {
    list-style: none;
    font-weight: var(--weight-bolder);
    padding-bottom: 0.75em;
}
.nav-links-list a {
    color: var(--lightGray-color);
    text-decoration: none;
}
.nav-links-list li {
    margin-bottom: 0.5em;
}
.nav-links-list a:hover {
    color: var(--pink-color);
    text-decoration: underline;
}
/*###################
    HERO
######################*/
 .hero {
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(3, 1fr);
 }
 .hero-img {
    grid-column: 1/4;
    grid-row: 1/4;

    align-self: center;
    justify-self: center;

    opacity: .30;
 }
.hero-img img {
    max-width: 800px;
}

.hero-text {
    grid-column: 1/4;
    grid-row: 1/4;

    text-align: center;

    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(3, 1fr);

    z-index: 1;

}

.hero-text-title {
    grid-column: 1/4;
    grid-row: 1/3;

    font-size: 3.25rem;
    font-family: var(--font-hero);
    font-weight: var(--weight-bolder);
    color: var(--brown-color);
    letter-spacing: 1px;

    align-self: center;
    justify-self: center;

}
.hero-text-subtitle {
    grid-column: 1/4;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;

    font-family: var(--font-hero);
    font-weight: var(--weight-bold);
    letter-spacing: 1.25px;
    font-size: var(--aboveNormal-size);
    color: var(--brown-color);

    margin-top: 1.25em;
}
.hero-text-btn {
    grid-column: 1/4;
    grid-row: 2/4;
    justify-self: center;
    align-self: center;

    background: var(--red-color);
    color: var(--white-color);
    padding: 0.75em 3em;
    border-radius: 15px;
    text-decoration: none;

    font-weight: var(--weight-bold);
}
.hero-text-btn:hover {
    color: var(--white-color);
    background: var(--gray-color);
}


/*###################
    FEATURED SECTION
######################*/

.featured-section {
    background: var(--gray-color);
}


@media (min-width:550px) {
    /*###################
        HEADER
    ######################*/
    .nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 97%;
        border-radius: 30px;

    }
    .nav-title {
        margin-top: 0;
        margin-bottom: 0.15em;
        padding-top: 0;
        margin-left: 1.5em;
        letter-spacing: 1px;
        font-size: var(--heading-size);
    }
    .nav-links-list {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        margin: 0 2em;
        padding-bottom: 0;

        list-style-type: none;
    }
    .nav-links-list li {
        margin-bottom: 0;
        margin-left: 1em;
    }

    .hero {
        display: flex;
        justify-content: center;
        align-items: center;    
    }
    .hero-img img {
        opacity: 100%;
    }



}

